# sync-client

./: .gitignore  Cargo.toml  job-queue.db
src/: lib.rs  main.rs  sqlite.rs  task.rs
